--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "graham-campbell/digitalocean",
-    "description": "DigitalOcean Is A DigitalOcean Bridge For Laravel 4.1/4.2",
+    "description": "DigitalOcean Is A DigitalOcean Bridge For Laravel 5",
     "keywords": ["laravel", "framework", "digitalocean", "digitalocean-v2", "DigitalOceanV2", "digitalocean bridge", "bridge", "DigitalOcean", "Laravel DigitalOcean", "Laravel-DigitalOcean", "Graham Campbell", "GrahamCampbell"],
     "license": "Apache-2.0",
     "authors": [
@@ -11,12 +11,13 @@
     ],
     "require": {
         "php": ">=5.4.7",
-        "illuminate/support": "~4.1",
-        "graham-campbell/manager": "~1.0",
+        "illuminate/contracts": "~5.0",
+        "illuminate/support": "~5.0",
+        "graham-campbell/manager": "~2.0",
         "toin0u/digitalocean-v2": "0.1.*"
     },
     "require-dev": {
-        "graham-campbell/testbench": "~1.0"
+        "graham-campbell/testbench": "~2.0"
     },
     "autoload": {
         "psr-4": {
@@ -26,6 +27,11 @@
     "autoload-dev": {
         "psr-4": {
             "GrahamCampbell\\Tests\\DigitalOcean\\": "tests/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev"
         }
     },
     "minimum-stability": "dev",
