--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,12 @@
             "email": "graham@mineuk.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/GrahamCampbell/testbench"
+        }
+    ],
     "require": {
         "php": ">=5.4.7",
         "illuminate/contracts": "~5.0",
@@ -17,6 +23,7 @@
         "toin0u/digitalocean-v2": "0.2.*"
     },
     "require-dev": {
+        "orchestra/testbench": "dev-fix-logging as 3.0.x-dev",
         "graham-campbell/testbench": "~2.0",
         "kriswallsmith/buzz": "~0.10",
         "guzzle/guzzle": "~3.7"
