Added support for guzzle 5

--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
         "php": ">=5.4.7",
         "illuminate/support": "~4.1",
         "graham-campbell/manager": "~1.0",
-        "toin0u/digitalocean-v2": "0.2.*"
+        "toin0u/digitalocean-v2": "0.3.*"
     },
     "require-dev": {
         "graham-campbell/testbench": "~1.0",
         "kriswallsmith/buzz": "~0.10",
-        "guzzle/guzzle": "~3.7"
+        "guzzle/guzzle": "~3.7",
+        "guzzlehttp/guzzle" : "~5.0"
     },
     "suggest": {
         "kriswallsmith/buzz": "Enables the buzz connector.",
