Use dist install by default

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
             "GrahamCampbell\\Tests\\DigitalOcean\\": "tests/"
         }
     },
+    "config": {
+        "preferred-install": "dist"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "2.0-dev"
