--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         "php": ">=5.5.9",
         "illuminate/contracts": "5.0.*|5.1.*",
         "illuminate/support": "5.0.*|5.1.*",
-        "graham-campbell/manager": "~2.3",
-        "toin0u/digitalocean-v2": "~1.0"
+        "graham-campbell/manager": "^2.3",
+        "toin0u/digitalocean-v2": "^1.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.1",
-        "guzzle/guzzle": "~3.7",
-        "guzzlehttp/guzzle" : "~5.0",
-        "kriswallsmith/buzz": "~0.10",
+        "guzzle/guzzle": "^3.7",
+        "guzzlehttp/guzzle" : "^5.0",
+        "kriswallsmith/buzz": "^0.10",
         "mockery/mockery": "^0.9.4",
         "phpunit/phpunit": "^4.8|^5.0"
     },
