--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,19 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": "^7.0",
         "illuminate/contracts": "5.1.*|5.2.*|5.3.*|5.4.*",
         "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*",
-        "graham-campbell/manager": "^2.3",
+        "graham-campbell/manager": "^3.0",
         "toin0u/digitalocean-v2": "^2.0"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.1",
+        "graham-campbell/testbench": "^4.0",
         "guzzle/guzzle": "^3.7",
         "guzzlehttp/guzzle" : "^5.0|^6.0",
         "kriswallsmith/buzz": "^0.10",
-        "mockery/mockery": "^0.9.4",
-        "phpunit/phpunit": "^4.8|^5.0"
+        "mockery/mockery": "^0.9.9",
+        "phpunit/phpunit": "^5.0"
     },
     "suggest": {
         "kriswallsmith/buzz": "Enables the buzz connector.",
@@ -44,7 +44,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.2-dev"
+            "dev-master": "4.0-dev"
         }
     },
     "minimum-stability": "dev",
