--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "4.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "GrahamCampbell\\DigitalOcean\\DigitalOceanServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
