--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require-dev": {
         "graham-campbell/analyzer": "^2.0",
-        "graham-campbell/testbench": "^5.0",
+        "graham-campbell/testbench": "^4.0|^5.0",
         "guzzle/guzzle": "^3.7",
         "guzzlehttp/guzzle" : "^5.0|^6.0",
         "kriswallsmith/buzz": "^0.10",
