--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,20 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "illuminate/contracts": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "graham-campbell/manager": "^3.0",
+        "php": "^7.1.3",
+        "illuminate/contracts": "5.5.*|5.6.*",
+        "illuminate/support": "5.5.*|5.6.*",
+        "graham-campbell/manager": "^4.0",
         "toin0u/digitalocean-v2": "^2.0"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^2.0",
-        "graham-campbell/testbench": "^4.0|^5.0",
+        "graham-campbell/testbench": "^5.0",
         "guzzle/guzzle": "^3.7",
         "guzzlehttp/guzzle" : "^5.0|^6.0",
         "kriswallsmith/buzz": "^0.10",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^6.5|^7.0"
     },
     "suggest": {
         "kriswallsmith/buzz": "Enables the buzz connector.",
@@ -45,7 +45,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "4.0-dev"
+            "dev-master": "5.0-dev"
         },
         "laravel": {
             "providers": [
