--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/contracts": "5.5.*|5.6.*",
-        "illuminate/support": "5.5.*|5.6.*",
+        "illuminate/contracts": "5.5.*|5.6.*|5.7.*",
+        "illuminate/support": "5.5.*|5.6.*|5.7.*",
         "graham-campbell/manager": "^4.0",
         "toin0u/digitalocean-v2": "^2.0"
     },
