--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,19 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/contracts": "5.5.*|5.6.*|5.7.*",
-        "illuminate/support": "5.5.*|5.6.*|5.7.*",
-        "graham-campbell/manager": "^4.1",
-        "toin0u/digitalocean-v2": "^2.0"
+        "illuminate/contracts": "5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*",
+        "graham-campbell/manager": "^4.2",
+        "toin0u/digitalocean-v2": "^2.3"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^2.1",
-        "graham-campbell/testbench": "^5.1",
+        "graham-campbell/testbench": "^5.2",
         "guzzle/guzzle": "^3.7",
         "guzzlehttp/guzzle" : "^5.0|^6.0",
         "kriswallsmith/buzz": "^0.10",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.5|^7.0"
+        "phpunit/phpunit": "^6.5|^7.0|^8.0"
     },
     "suggest": {
         "kriswallsmith/buzz": "Enables the buzz connector.",
@@ -45,7 +45,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.1-dev"
+            "dev-master": "5.2-dev"
         },
         "laravel": {
             "providers": [
