--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/contracts": "5.5.*|5.6.*|5.7.*|5.8.*",
-        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/contracts": "^5.5|^6.0",
+        "illuminate/support": "^5.5|^6.0",
         "graham-campbell/manager": "^4.2",
         "toin0u/digitalocean-v2": "^2.3"
     },
@@ -45,7 +45,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.2-dev"
+            "dev-master": "5.3-dev"
         },
         "laravel": {
             "providers": [
