--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "graham-campbell/digitalocean",
-    "description": "DigitalOcean Is A DigitalOcean Bridge For Laravel 5",
+    "description": "DigitalOcean Is A DigitalOcean Bridge For Laravel",
     "keywords": ["laravel", "framework", "digitalocean", "digitalocean-v2", "DigitalOceanV2", "digitalocean bridge", "bridge", "DigitalOcean", "Laravel DigitalOcean", "Laravel-DigitalOcean", "Graham Campbell", "GrahamCampbell"],
     "license": "MIT",
     "authors": [
@@ -11,18 +11,18 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/contracts": "^5.5|^6.0",
-        "illuminate/support": "^5.5|^6.0",
-        "graham-campbell/manager": "^4.2",
+        "illuminate/contracts": "^5.5|^6.0|^7.0",
+        "illuminate/support": "^5.5|^6.0|^7.0",
+        "graham-campbell/manager": "^4.4",
         "toin0u/digitalocean-v2": "^2.3"
     },
     "require-dev": {
-        "graham-campbell/analyzer": "^2.1",
-        "graham-campbell/testbench": "^5.2",
+        "graham-campbell/analyzer": "^2.4",
+        "graham-campbell/testbench": "^5.4",
         "guzzle/guzzle": "^3.7",
         "guzzlehttp/guzzle" : "^5.0|^6.0",
         "kriswallsmith/buzz": "^0.10",
-        "mockery/mockery": "^1.0",
+        "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^6.5|^7.0|^8.0"
     },
     "suggest": {
@@ -45,7 +45,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.3-dev"
+            "dev-master": "5.4-dev"
         },
         "laravel": {
             "providers": [
