--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,20 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "illuminate/contracts": "^5.5|^6.0|^7.0",
-        "illuminate/support": "^5.5|^6.0|^7.0",
-        "graham-campbell/manager": "^4.4",
+        "php": "^7.2.5",
+        "graham-campbell/manager": "^4.5",
+        "illuminate/contracts": "^6.0|^7.0",
+        "illuminate/support": "^6.0|^7.0",
         "toin0u/digitalocean-v2": "^2.3"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^2.4",
         "graham-campbell/testbench": "^5.4",
         "guzzle/guzzle": "^3.7",
-        "guzzlehttp/guzzle" : "^5.0|^6.0",
-        "kriswallsmith/buzz": "^0.10",
+        "guzzlehttp/guzzle" : "^6.3",
+        "kriswallsmith/buzz": "^0.15",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^6.5|^7.0|^8.0"
+        "phpunit/phpunit": "^8.5|^9.0"
     },
     "suggest": {
         "kriswallsmith/buzz": "Enables the buzz connector.",
@@ -45,7 +45,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.4-dev"
+            "dev-master": "6.0-dev"
         },
         "laravel": {
             "providers": [
