--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         "graham-campbell/manager": "^4.5",
         "illuminate/contracts": "^6.0|^7.0",
         "illuminate/support": "^6.0|^7.0",
-        "toin0u/digitalocean-v2": "^2.3"
+        "toin0u/digitalocean-v2": "3.0.*"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^3.0",
         "graham-campbell/testbench": "^5.4",
-        "guzzlehttp/guzzle" : "^6.3",
+        "guzzlehttp/guzzle" : "^7.0",
         "kriswallsmith/buzz": "^0.16",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^8.5|^9.0"
