--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": "^7.2.5",
         "graham-campbell/manager": "^4.5",
-        "illuminate/contracts": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
+        "illuminate/contracts": "^6.0 || ^7.0",
+        "illuminate/support": "^6.0 || ^7.0",
         "toin0u/digitalocean-v2": "^2.3"
     },
     "require-dev": {
@@ -22,7 +22,7 @@
         "guzzlehttp/guzzle" : "^6.3",
         "kriswallsmith/buzz": "^0.16",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^8.5|^9.0"
+        "phpunit/phpunit": "^8.5 || ^9.0"
     },
     "suggest": {
         "kriswallsmith/buzz": "Enables the buzz connector.",
