--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": "^7.2.5",
         "graham-campbell/manager": "^4.5",
-        "illuminate/contracts": "^6.0 || ^7.0",
-        "illuminate/support": "^6.0 || ^7.0",
+        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0",
         "toin0u/digitalocean-v2": "3.0.*"
     },
     "require-dev": {
