--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     ],
     "require": {
         "php": "^7.2.5 || ^8.0",
-        "graham-campbell/manager": "^4.5",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0",
-        "toin0u/digitalocean-v2": "4.3.*"
+        "graham-campbell/manager": "^4.7",
+        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "toin0u/digitalocean-v2": "4.4.*"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^3.0",
-        "graham-campbell/testbench": "^5.6",
-        "guzzlehttp/guzzle": "^7.2",
+        "graham-campbell/testbench": "^5.7",
+        "guzzlehttp/guzzle": "^7.4",
         "http-interop/http-factory-guzzle": "^1.0",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^8.5.8 || ^9.3.7"
