--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,19 @@
         }
     ],
     "require": {
-        "php": "^7.2.5 || ^8.0",
+        "php": "^7.4.15 || ^8.0.2",
         "graham-campbell/manager": "^4.7",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "toin0u/digitalocean-v2": "4.4.*"
+        "guzzlehttp/guzzle": "^7.4.3",
+        "guzzlehttp/psr7": "^2.2.1",
+        "illuminate/contracts": "^8.75 || ^9.0",
+        "illuminate/support": "^8.75 || ^9.0",
+        "toin0u/digitalocean-v2": "4.5.*"
     },
     "require-dev": {
-        "graham-campbell/analyzer": "^3.0",
+        "graham-campbell/analyzer": "^3.1",
         "graham-campbell/testbench": "^5.7",
-        "guzzlehttp/guzzle": "^7.4",
-        "http-interop/http-factory-guzzle": "^1.0",
-        "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^8.5.8 || ^9.3.7"
+        "mockery/mockery": "^1.5",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
