--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "graham-campbell/manager": "^5.1",
         "guzzlehttp/guzzle": "^7.8.1",
         "guzzlehttp/psr7": "^2.6.2",
-        "illuminate/contracts": "^8.75 || ^9.0 || ^10.0",
-        "illuminate/support": "^8.75 || ^9.0 || ^10.0",
+        "illuminate/contracts": "^8.75 || ^9.0 || ^10.0 || ^11.0",
+        "illuminate/support": "^8.75 || ^9.0 || ^10.0 || ^11.0",
         "toin0u/digitalocean-v2": "4.9.*"
     },
     "require-dev": {
