--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
         "graham-campbell/manager": "^5.1",
         "guzzlehttp/guzzle": "^7.8.1",
         "guzzlehttp/psr7": "^2.6.2",
-        "illuminate/contracts": "^8.75 || ^9.0 || ^10.0",
-        "illuminate/support": "^8.75 || ^9.0 || ^10.0",
+        "illuminate/contracts": "^8.75 || ^9.0 || ^10.0 || ^11.0",
+        "illuminate/support": "^8.75 || ^9.0 || ^10.0 || ^11.0",
         "toin0u/digitalocean-v2": "4.9.*"
     },
     "require-dev": {
         "graham-campbell/analyzer": "^4.1",
         "graham-campbell/testbench": "^6.1",
         "mockery/mockery": "^1.6.6",
-        "phpunit/phpunit": "^9.6.15 || ^10.4.2"
+        "phpunit/phpunit": "^9.6.17 || ^10.5.13"
     },
     "autoload": {
         "psr-4": {
